--- a/colorwise/src/App.css
+++ b/colorwise/src/App.css
@@ -85,6 +85,7 @@ letter-spacing: -2%;
   .upload-content {
     font-family: Arial, sans-serif;
     color: #b4a0e5;
+    font-size: large;
   }
   
   .upload-content p {
@@ -149,6 +150,7 @@ letter-spacing: -2%;
     padding-bottom: 96px;
     gap: 64px;
     background-color: #FFFFFF;
+    margin-left: 76px;
 }
 
 .outer-row
@@ -202,10 +204,14 @@ gap: 20px;
   border-radius: 100px;
   cursor: crosshair;
 }
-.bn{
+.bn {
   width: 80px;
   height: 80px;
   border-radius: 20px;
+  font-size: 25px;
+  box-shadow: 5px 5px 5px;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease; /* Smooth transition for border color */
 }
 .color-btn{
   display: flex;
@@ -219,3 +225,76 @@ gap: 20px;
 .description{
   width: 160px;
 }
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1000px;
+}
+.items{
+  display: flex;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: large;
+}
+.footer-box1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1111px;
+}
+.footer-box2{
+  display: flex;
+  gap: 976px;
+}
+/* .footer-box3{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+ .foot-list{
+  display: flex;
+  margin-left: -10px;
+ }
+ .secondbox-footer{
+  display: flex;
+  flex-direction: column;
+  margin-left: 24px;
+ }
+ .logo{
+  width: 100px;
+  height: 50px;
+  margin-left: 57px;
+ }
+ .text{
+  margin-left: 68px;
+ }
+ .google-play{
+  margin-right: 10px;
+ }
+ .footer-box3{
+  display: flex;
+  align-items: center;
+  gap: 1257px;
+ }
+ .h4{
+  margin-left: 92px;
+ }
+ .footer-big-box{
+  background-color: #E31B54;
+  color: white;
+ }
+ .fetch-button{
+  width: 760px;
+  height: 48px;
+  border-radius: 8px;
+  background-color: #F63D68;
+  font-size: 20px;
+ }
+ .p12{
+    margin-left: 136px;
+    margin-top: 146px;
+    height: 580px;
+    width: 711px;
+ }
+ /* Adjust for smaller devices (max-width: 600px) */
+
